Made some changes for SonarQube